@@ -1,3 +1,9 @@
+** v4.28 05.08.2019**
+* Added Pawn Skin, needs AddOnSkins to work.
+* Adjust some install settings.
+* Added a Paragon Reputation feature.
+* Finally fixed a db error if AAP + HandyNotes are enabled. Big thanks to NihilisticPandemonium <3
+
 ** v4.27 29.07.2019**
 * Update some skins.
 * Update Azerite Armor Tooltip.
