@@ -1,3 +1,9 @@
+[b][color=orange]v4.28[/color], 05.08.2019[/b][list]
+[*]Added Pawn Skin, needs AddOnSkins to work.
+[*]Adjust some install settings.
+[*]Added a Paragon Reputation feature.
+[*]Finally fixed a db error if AAP + HandyNotes are enabled. Big thanks to NihilisticPandemonium <3[/list]
+
 [b][color=orange]v4.27[/color], 29.07.2019[/b][list]
 [*]Update some skins.
 [*]Update Azerite Armor Tooltip.
